# StarcraftAgent

./: README.md
code/: .gitignore  README.md  _config.py  main.py  run.py  run_sc2.py  techtree.json
code/Safe_Paths/: AStar.py  Node.py  PotentialField.py
code/agents/: basic_agent.py  noop_agent.py
code/logs/: plot_logs.m
code/modules/: Init_buildings.py  build_order.py  create_build_order.py  debugging.py  extra.py  logger.py  py_building_placer.py  py_unit.py  task_manager.py  tictoc.py  unit_collection.py
code/pycommandcenter-1.4/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ExtendAPI.md  LICENSE  README.md  create-visual-studio-solution-python37.sh  create-visual-studio-solution-python38.sh  create-visual-studio-solution-python39.sh  create-visual-studio-solution.bat  pycharm.md
code/pycommandcenter-1.4/docs/: .gitignore  Makefile  conf.py  constants.rst  contributing.rst  coordinates.rst  deploy-ida.sh  gettingstarted.rst  helpers.rst  idabot.rst  idareplayobserver.rst  index.rst  library_import_check.py  make.bat  replays.rst  replayunit.rst  types.rst  unit.rst
code/pycommandcenter-1.4/docs/_templates/: layout.html
code/pycommandcenter-1.4/python-api-src/: CMakeLists.txt  lib_base_location.cpp  lib_building_placer.cpp  lib_color.cpp  lib_map_tools.cpp  lib_point.cpp  lib_replay_unit.cpp  lib_sc2_typeenums.cpp  lib_tech_tree.cpp  lib_unit.cpp  lib_unittype.cpp  lib_util.cpp  library.cpp  library.h
code/pycommandcenter-1.4/src/: BaseLocation.cpp  BaseLocation.h  BaseLocationManager.cpp  BaseLocationManager.h  BuildingPlacer.cpp  BuildingPlacer.h  CMakeLists.txt  Common.h  DistanceMap.cpp  DistanceMap.h  IDABot.cpp  IDABot.h  IDAReplayObserver.cpp  IDAReplayObserver.h  MapTools.cpp  MapTools.h  MetaType.cpp  MetaType.h  MyAgent.cpp  MyAgent.h  ReplayUnit.cpp  ReplayUnit.h  TechTree.cpp  TechTree.h  TechTreeImproved.cpp  TechTreeImproved.h  Unit.cpp  Unit.h  UnitInfoManager.cpp  UnitInfoManager.h  UnitType.cpp  UnitType.h  Util.cpp  Util.h  WorkerData.cpp  WorkerData.h  main.cpp
code/pycommandcenter-1.4/tests/: unittypeid.py
code/tasks/: attack.py  build.py  gather_gas.py  gather_minerals.py  move.py  scout.py  task.py  train.py
code/visualdebugger/: README.md  flow_debugger.py  heat_map_debugger.py  path_debugger.py  visual_debugger.py
